fixed az params

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -138,7 +138,7 @@ jobs:
         uses: azure/CLI@v2
         with:
           inlineScript:	|
-            az extension add --name devcenter --upgrade --yes
+            az extension add --name devcenter --upgrade --yes --allow-preview true
             
             COMPUTEGALLERY_RESOURCEID=$(echo '${{ steps.packer.outputs.gallery_imageid }}' | cut -d '/' -f -9)
             DEVCENTERGALLERY_RESOURCEID=$(az devcenter admin gallery list --subscription ${{ steps.image.outputs.devcenter_subscription }} --resource-group ${{ steps.image.outputs.devcenter_resourcegroup }} --dev-center ${{ steps.image.outputs.devcenter_name }} | jq --raw-output ".[] | select(.galleryResourceId == \"$COMPUTEGALLERY_RESOURCEID\") | .id")
@@ -157,7 +157,6 @@ jobs:
               --image-reference id="$DEVCENTERGALLERY_IMAGEID" \
               --os-storage-type ${{ steps.image.outputs.devcenter_storage }} \
               --sku name="${{ steps.image.outputs.devcenter_compute }}" \
-              --allow-preview true \
               --hibernate-supported Enabled \
               --only-show-errors 2>&1
 
@@ -205,7 +204,8 @@ jobs:
         uses: azure/CLI@v2
         with:
           inlineScript:	|
-            az extension add --name devcenter --upgrade --yes
+            az extension add --name devcenter --upgrade --yes --allow-preview true
+            
             COMPUTEGALLERY_RESOURCEID=$(echo '${{ steps.image.outputs.gallery_imageid }}' | cut -d '/' -f -9)
             DEVCENTERGALLERY_RESOURCEID=$(az devcenter admin gallery list --subscription ${{ steps.image.outputs.devcenter_subscription }} --resource-group ${{ steps.image.outputs.devcenter_resourcegroup }} --dev-center ${{ steps.image.outputs.devcenter_name }} | jq --raw-output ".[] | select(.galleryResourceId == \"$COMPUTEGALLERY_RESOURCEID\") | .id")
             echo "referenceId_version=$DEVCENTERGALLERY_RESOURCEID/$(echo '${{ steps.image.outputs.gallery_imageid }}' | cut -d '/' -f 10-)" >> $GITHUB_OUTPUT
@@ -222,7 +222,7 @@ jobs:
         uses: azure/CLI@v2
         with:
           inlineScript:	|
-            az extension add --name devcenter --upgrade --yes
+            az extension add --name devcenter --upgrade --yes --allow-preview true
 
             while [ "Accepted" == "$(az devcenter admin devbox-definition show --subscription ${{ steps.image.outputs.devcenter_subscription }} --resource-group ${{ steps.image.outputs.devcenter_resourcegroup }} --dev-center ${{ steps.image.outputs.devcenter_name }} --devbox-definition-name "${{ inputs.imageName }}" --query provisioningState --output tsv 2> /dev/null)" ]; do
               echo "DevBox definition '${{ inputs.imageName }}' is in a pending state and can't be created or updated - retry in 60 sec"; sleep 60 
@@ -237,7 +237,6 @@ jobs:
                 --image-reference id="${{ steps.reference.outputs.referenceVersion == 'true' && steps.reference.outputs.referenceId_version || steps.reference.outputs.referenceId_latest }}" \
                 --os-storage-type ${{ steps.image.outputs.devcenter_storage }} \
                 --sku name="${{ steps.image.outputs.devcenter_compute }}" \
-                --allow-preview true \
                 --hibernate-supported Enabled \
                 --only-show-errors && break || echo "DevBox definition '${{ inputs.imageName }}' can't be created or updated because of a pending gallery update - retry in 60 sec"
             done 
