fixed archive condition

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -244,7 +244,7 @@ jobs:
   archive:
     needs: release
     runs-on: ubuntu-latest    
-    if: ${{ needs.release.outputs.archive }}
+    if: ${{ needs.release.outputs.archive == 'true' }}
 
     defaults:
       run:
